# Web-App

./: .gitignore  .gitmodules  README.md  api-overview.md  pyproject.toml  requirements.txt  site-overview.md  web-app-lab.md
clothing_store/: __init__.py  api.py  auth.py  blog.py  cart.py  checkout.py  db.py  populate.sql  schema.sql  shop.py  store.py
clothing_store/static/css/: auth.css  base.css  cart.css  checkout.css  home.css  product.css  shop.css
clothing_store/templates/: base.html  cart.html  checkout.html
clothing_store/templates/auth/: login.html  register.html
clothing_store/templates/blog/: create.html  index.html  update.html
clothing_store/templates/checkout/: success.html
clothing_store/templates/home/: index.html
clothing_store/templates/shop/: index.html  product.html
tests/: conftest.py  test_auth.py  test_blog.py  test_factory.py
tests/pytest/: test_cart.py  test_checkout.py  test_db.py  test_product.py  test_shop.py
tests/selenium_tests/: test_ui_selenium.py
