[project]
name = "clothing_store"
version = "1.0.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["clothing_store"]

[tool.djlint]
indent=2
blank_line_before_tag="load,extends,include,block,if,for,macro,filter,with,autoescape"
max_line_length=220
